--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,11 @@
 [tool.poetry]
-name = "polymarket-trading"
+name = "polymarket"
 version = "0.1.0"
 description = ""
 authors = ["Shawn Koh <shawn@shawnkoh.sg>"]
+
+[tool.poetry.scripts]
+pm-trade = "polymarket.cli:main"
 
 [tool.poetry.dependencies]
 python = "^3.10"
