--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Shawn Koh <shawn@shawnkoh.sg>"]
 
 [tool.poetry.scripts]
-pm-trade = "polymarket.cli:main"
+pm = "polymarket.cli:main"
 
 [tool.poetry.dependencies]
 python = "^3.10"
